<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tempTestAB</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="account_Name">Account:</string>
    <string name="hint_editAccount">Email or Phone number.</string>
    <string name="psw_Name">Password:</string>
    <string name="hint_editPsw">Enter the password.</string>
    <string name="checkbox_RememberPsw">Remember</string>
    <string name="btn_Login">  Login  </string>
    <string name="txt_Hint">  Create an account? </string>
    <string name="txt_Register">  Register </string>
</resources>
