<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_Name"
        android:layout_alignParentTop="true"
         />
    
    <EditText 
        android:id="@+id/editAccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:hint="@string/hint_editAccount"
        android:layout_below="@id/txtAccount"
       android:layout_centerVertical="true"
       
         />
    
        
     <TextView
        android:id="@+id/txtPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/psw_Name" 
        android:layout_below="@id/editAccount"
        />
       
    <EditText 
        android:id="@+id/editPsw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:hint="@string/hint_editPsw" 
        android:inputType="textPassword"
        android:layout_below="@id/txtPsw"
        android:layout_centerVertical="true"
        />
    
     <CheckBox  
        android:id="@+id/checkbox"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:text="@string/checkbox_RememberPsw" 
        android:layout_below="@id/editPsw"
        /> 
        
    
      <ImageButton  
        android:id="@+id/login"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_gravity="center_horizontal" 
        android:layout_below="@id/editPsw"
        android:layout_alignParentRight="true"
        />  
        
       <TextView
        android:id="@+id/txtHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Hint"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/login"
        android:textColor="#003366" 
         />
        <TextView
        android:id="@+id/mTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="!!!" 
        android:layout_below="@id/txtHint"
        />
       
      


</RelativeLayout>
